ROO-2717: I/O resources can be left open - closed resources flagged by FindBugs (also fixed some other FindBugs warnings)